// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapHex #render returns the SVG for this element 1`] = `
<svg
  className="hex"
  onClick={undefined}
  x={554.2562584220407}
  y={384}
>
  <polygon
    fill="#efe"
    points="110.85125168440814,32 55.42562584220407,0 0,32 0,96 55.42562584220407,128 110.85125168440814,96"
    stroke="black"
  />
</svg>
`;

exports[`MapHex #render when it contains a tile draws the tile at the end 1`] = `
<svg
  className="hex"
  onClick={undefined}
  x={554.2562584220407}
  y={384}
>
  <polygon
    fill="#efe"
    points="110.85125168440814,32 55.42562584220407,0 0,32 0,96 55.42562584220407,128 110.85125168440814,96"
    stroke="black"
  />
  <svg
    height={128}
    viewBox="0 0 110.85125168440814 128"
    width={110.85125168440814}
    xmlns="http://www.w3.org/2000/svg"
  >
    <polygon
      fill="yellow"
      points="0,32 55.42562584220407,0 110.85125168440814,32 110.85125168440814,96 55.42562584220407,128 0,96"
    />
  </svg>
</svg>
`;

exports[`MapHex #render when it contains some elements draws the tile at the end 1`] = `
<svg
  className="hex"
  onClick={undefined}
  x={554.2562584220407}
  y={384}
>
  <polygon
    fill="#efe"
    points="110.85125168440814,32 55.42562584220407,0 0,32 0,96 55.42562584220407,128 110.85125168440814,96"
    stroke="black"
  />
  ELEMENT
</svg>
`;

exports[`MapHex #render when on click is not set renders correctly 1`] = `
<MapHex
  allowTile={true}
  column={1}
  elements={
    Immutable.List [
    ]
  }
  fill="#efe"
  mapDef={
    Object {
      "companies": Object {},
      "hexes": Object {
        "a": Array [],
        "b": Array [],
        "c": Array [],
        "d": Array [],
        "e": Array [],
        "f": Array [],
        "g": Array [],
      },
      "orientation": "east-west",
      "tileManifest": Object {},
    }
  }
  onHexClick={undefined}
  row="e"
/>
`;
